2009-03-03  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Fix unintended shift of plot image for
	the gnuplot postscript+eps terminal.

2009-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* pkg/pkg.m (fix_depends): Fix & simplify splitting the string.

2009-03-02  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* set/complement.m, set/union.m: Remove reference to deprecated
	function create_set.

2009-03-01  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Do not render axis labels twice when
	their handles are visible, but do render objects with hidden
	handles.

2009-03-01  Ben Abbott <bpabbott@mac.com>

	* general/num2str.m: Trivial bug fix. Recent switch from split()
	to strsplit() produced cells rather than character data.

2009-03-01  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m: Bug fix. Allow hidden colorbars to be deleted,
	and replace existing colorbar when a new one is created. Additional
	demos are included to verify these behaviors.

2009-02-28  Ben Abbott <bpabbott@mac.com>

	* plot/__actual_axis_position__.m: Include file missed in prior
	changeset.

2009-02-28  Ben Abbott <bpabbott@mac.com>

	* plot/print.m, plot/gnuplot_drawnow.m: Add compatible support for
	specificying resolution of bitmap terminals, "-r<num>".

	* plot/gnuplot_drawnow.m: Check that canvas size is only specified
	one time.

	* plot/gnuplot_drawnow.m, plot/__go_draw_figure__.m: Support papersize,
	paperposition properties. Accommodate gnuplot's implicit margins for
	postscript terminals. Remove internal function get_canvassize().

	* plot/gnuplot_drawnow.m:
	Terminate gnuplot "set term ..." with semicolon.
	Specify vector terminals sizes in floating point.
	Rename internal function isbackend() to output_to_screen().
	Rename internal function gnuplot_term() to gnuplot_default_term().
	Rename internal function isbitmap() to term_units_are_pixels().
	Minor changes for coding conventions.

	* plot/__actual_axis_position__.m, Makefile.in: New function to